--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_messaging: ^6.0.13
+  cloud_firestore: ^0.13.5
+  http: ^0.12.0+4
+  shape_of_view: ^1.0.2
+  circular_profile_avatar: ^1.0.6
+  pull_to_refresh: ^1.5.8
+  maps_launcher: ^1.2.0
+  url_launcher: ^5.4.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,8 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/user.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
