--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   pull_to_refresh: ^1.5.8
   maps_launcher: ^1.2.0
   url_launcher: ^5.4.2
+  flutter_swiper:
   flutter_svg:
   get_it:
   firebase_auth:
